# GZCTF-DC-Bot

./: .gitignore  CONFIG_TEMPLATE.toml  Cargo.toml  README.md
src/: config.rs  discord.rs  gzctf.rs  handler.rs  log.rs  main.rs  models.rs  polling.rs  queue.rs  tracker.rs
