[package]
name = "dc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
